# stm32f4Cmake

./: .gitignore
Project/: .cproject  .mxproject  .project  CMakeLists.txt  stm32f4CmakeTest.ioc
Project/Core/Src/: main.c
Project/Debug/: makefile  stm32f4CmakeTest.elf  stm32f4CmakeTest.list  stm32f4CmakeTest.map
Project/Debug/Core/Src/: main.su
Project/cmake_generated/: cmake_generated.cmake
Test/: CMakeLists.txt
